ingressService.yml
apiVersion: v1
kind: Service
metadata:
  name: web-nginx
  namespace: nstodolegal
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: django-service
