service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: nstodolegal
  # annotations:
  #   # Note that the backend talks over HTTP.
  #   service.beta.kubernetes.io/aws-load-balancer-type: external
  #   # TODO: Fill in with the ARN of your certificate.
  #   service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:961883253387:certificate/b3e5edca-11ac-4c68-83f1-2a8a688129ed
  #   # Run TLS only on the port named "https" below.
  #   service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
  #   # By default In-tree controller will create a Classic LoadBalancer if you require a NLB uncomment below annotation.
  #   # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8000
      protocol: TCP
  selector:
    app: django
