ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-nginx-ingress
  namespace: nstodolegal
  annotations:
  # Below annotation is to specify if the loadbalancer is "internal" or "internet-facing"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # TODO: Fill in with the ARN of your certificate.
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:961883253387:certificate/2d357488-2754-4c61-bc37-3ed0f1230a9d
    # TODO: Fill in the listening ports.
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # Set HTTP to HTTPS redirects. Every HTTP listener configured is redirected to below mentioned port over HTTPS.
    #alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0ada23b07a6e59360,subnet-0e773a07b1bd8aacc,subnet-032135437e19524a3
  labels:
    app: django
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 80
